rendering data dynamically

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Meg Shulmister, Full-Stack Developer"
     />
+    <link rel="icon" 
+      type="image/png" 
+      href="./favicon.ico">
     <title>Meg Shulmister</title>
   </head>
   <body>
