--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- <meta property="og:title" content="Meg Shulmister - Full-Stack Developer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./ "/>
+    <meta property="og:url" content="https://www.megshulmister.com" /> -->
+
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+  
     <meta
       name="description"
-      content="Meg Shulmister, Full-Stack Developer"
+      content="Meg Shulmister | Full-Stack Developer"
     />
     <link rel="icon" 
       type="image/png" 
