--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <meta property="og:title" content="Meg Shulmister - Full-Stack Developer" />
+    <meta property="og:title" content="Meg Shulmister - Full-Stack Developer" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./ "/>
-    <meta property="og:url" content="https://www.megshulmister.com" /> -->
+    <meta property="og:image" content="/public/portfolio.png"/>
+    <meta property="og:url" content="https://www.megshulmister.com" />
 
 
 
