--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta property="og:title" content="Meg Shulmister - Full-Stack Developer" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/portfolio.png"/>
+    <meta property="og:image" content="https://megshulmister.com/public/portfolio.png"/>
     <meta property="og:url" content="https://www.megshulmister.com" />
 
 
