--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8" />
     <meta property="og:title" content="Meg Shulmister - Full-Stack Developer" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://megshulmister.com/public/portfolio.png"/>
+    <!-- <meta property="og:image" content="https://megshulmister.com/public/portfolio.png"/> -->
+
+    <meta property="og:image" content="/portfolio.png" />
+<meta property="og:image:secure_url" content="/portfolio.png" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="400" />
+<meta property="og:image:height" content="300" />
+<meta property="og:image:alt" content="Meg Shulmister" />
+    
     <meta property="og:url" content="https://www.megshulmister.com" />
 
 
